<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="177dp"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="1dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="354dp"
        android:layout_height="639dp"
        android:layout_marginBottom="20dp"
        android:background="#E91E63"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/CV1"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_weight="50"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="254dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/download" />

            <TextView
                android:id="@+id/txtview1"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_gravity="bottom"
                android:gravity="center|center_vertical"
                android:text="@string/workouts"
                android:textColorHighlight="#090909"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CV2"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:layout_weight="50"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="254dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/diet" />

            <TextView
                android:id="@+id/txtview2"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_gravity="bottom"
                android:gravity="center|center_vertical"
                android:text="@string/diets"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="408dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>